--- a/src/pages/strategy/index.html
+++ b/src/pages/strategy/index.html
@@ -5,5 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>策略模式</title>
   </head>
-  <body></body>
+  <body>
+    <span style="color: green">使用策略模式实现缓动动画</span>
+    <div style="position: relative; width: 100%; height: 60px">
+      <div
+        id="cube"
+        style="
+          position: absolute;
+          background-color: blue;
+          width: 50px;
+          height: 50px;
+          border-radius: 100px;
+          text-align: center;
+          line-height: 50px;
+        "
+      >
+        Cube
+      </div>
+    </div>
+    <span style="color: green">使用策略模式实现表单校验</span>
+
+    <form action="#" id="registerForm" method="post">
+      <label>请输入用户名&emsp;: </label><input type="text" name="userName" />
+      <br />
+      <label>请输入密码&emsp;&emsp;: </label><input type="text" name="password" />
+      <br />
+      <label>请输入手机号码: </label>
+      <br /><input type="text" name="phoneNumber" />
+      <button>提交</button>
+    </form>
+  </body>
 </html>
